@@ -90,6 +90,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1583880: fix tarfile's problems with long names and posix/
+  GNU modes.
+
 - Fix codecs.EncodedFile which did not use file_encoding in 2.5.0, and
   fix all codecs file wrappers to work correctly with the "with"
   statement (bug #1586513).
